[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# internal
dungers_bitbuf = { path = "crates/dungers_bitbuf" }
dungers_charsor = { path = "crates/dungers_charsor" }
dungers_genvec = { path = "crates/dungers_genvec" }
dungers_ntree = { path = "crates/dungers_ntree" }
dungers_rangealloc = { path = "crates/dungers_rangealloc" }
dungers_varint = { path = "crates/dungers_varint" }
# external
criterion = { version = "0.6.0", features = ["html_reports"] }
criterion-cycles-per-byte = "0.6.1"

[package]
name = "dungers"
version = "0.0.0"
edition.workspace = true

[dependencies]
dungers_bitbuf = { workspace = true, optional = true }
dungers_charsor = { workspace = true, optional = true }
dungers_genvec = { workspace = true, optional = true }
dungers_ntree = { workspace = true, optional = true }
dungers_rangealloc = { workspace = true, optional = true }
dungers_varint = { workspace = true, optional = true }

[features]
bitbuf = ["dep:dungers_bitbuf"]
charsor = ["dep:dungers_charsor"]
genvec = ["dep:dungers_genvec"]
ntree = ["dep:dungers_ntree"]
rangealloc = ["dep:dungers_rangealloc"]
varint = ["dep:dungers_varint", "dungers_bitbuf?/varint"]
