[package]
name = "dungers_bitbuf"
version = "0.0.0"
edition.workspace = true

[dependencies]
dungers_varint = { workspace = true, optional = true }
thiserror.workspace = true
bytemuck.workspace = true

[features]
varint = ["dep:dungers_varint"]

[[test]]
name = "varint"
required-features = ["varint"]
